--- a/Views/uBlogsyBase.cshtml
+++ b/Views/uBlogsyBase.cshtml
@@ -1,9 +1,9 @@
-@*
+﻿@*
     Base layout just to keep things a bit tidy in Umbraco back office.
 *@
 @inherits UmbracoTemplatePage
 @{
-    Layout = null;
+    Layout = "Main.cshtml";
 }
 
 @RenderSection("uBlogsyMain")
