--- a/Views/Partials/uBlogsy/Widgets/uBlogsyWidgetListPosts.cshtml
+++ b/Views/Partials/uBlogsy/Widgets/uBlogsyWidgetListPosts.cshtml
@@ -27,6 +27,7 @@
 
 @helper RenderForWidget(IEnumerable<IPublishedContent> nodes, int imageHieght, int imageWidth, string defaultImage)
 {
+try{
     <div class="uBlogsy_posts_container uBlogsy_bottom_border">
         <h2 class="uBlogsy_head_style20">@Umbraco.GetDictionaryValue("uBlogsyDicPostsLatest")</h2>
         <ul>
@@ -39,6 +40,7 @@
             }
         </ul>
     </div>
+	}catch(Exception ex){}
 }
 
 
