Closer to getting the blog landing page all set up

--- a/Views/Partials/uBlogsy/Post/uBlogsyPostListLabels.cshtml
+++ b/Views/Partials/uBlogsy/Post/uBlogsyPostListLabels.cshtml
@@ -22,19 +22,14 @@
 
 @helper RenderForPost(IPublishedContent landing, IEnumerable<IPublishedContent> labels)
 {
-    <div class="uBlogsy_labels_container">
-        <h5 class="uBlogsy_font_style40">@Umbraco.GetDictionaryValue("uBlogsyDicCategories")</h5>
-        <ul class="uBlogsy_labels uBlogsy_font_style50">
-            @foreach (var node in labels)
-            {
-                var label = node.GetPropertyValue<string>("uBlogsyLabelName");
-                if (!string.IsNullOrEmpty(label))
-                {
-                    <li><a href="@landing.Url()?label=@Server.UrlEncode(label)" title="@label">@label</a></li>
-                }
-            }
-        </ul>
-    </div>
+	foreach (var node in labels)
+	{
+		var label = node.GetPropertyValue<string>("uBlogsyLabelName");
+		if (!string.IsNullOrEmpty(label))
+		{
+			<a class="tips" href="@landing.Url()?label=@Server.UrlEncode(label)" title="View all posts in @label">@label</a>
+		}
+	}
 }
 
 
