--- a/Views/Partials/uBlogsy/Landing/uBlogsyLandingListPosts.cshtml
+++ b/Views/Partials/uBlogsy/Landing/uBlogsyLandingListPosts.cshtml
@@ -29,8 +29,8 @@
     //var posts = NoLuceneFallbackService.Instance.GetPosts(Model.Content.Id, tag, label, author, searchTerm, commenter, year, month, out postCount).Skip((page - 1) * itemsPerPage).Take(itemsPerPage);
     
     // pagination
-    @RenderPagination(page, postCount, itemsPerPage)
     @RenderForLanding(posts)
+	    @RenderPagination(page, postCount, itemsPerPage)
 }
 
 
@@ -60,7 +60,8 @@
         var pages = (int)Math.Ceiling((double)postCount / itemsPerPage);
         var url = Request.Url.ToString();
     
-    <ul id="uBlogsy_pagination" class="uBlogsy_font_style20">
+    <div class="text-center">
+		<ul class="pagination">
         @* render prev link *@
         <li class="uBlogsy_page_prev">
             @if (page > 1)
@@ -105,4 +106,5 @@
             }
         </li>
     </ul>
+	</div>
 }
