--- a/Views/Partials/uBlogsy/Landing/uBlogsyLandingShowPost.cshtml
+++ b/Views/Partials/uBlogsy/Landing/uBlogsyLandingShowPost.cshtml
@@ -6,9 +6,9 @@
 @inherits UmbracoTemplatePage
 @{
     // image settings
-    const string defaultImage = "http://placekitten.com/g/300/200/"; // change this if want a default image. eg "http://placekitten.com/g/300/200/", else make it null (no "")
+    const string defaultImage = null;
     const int imageHieght = -1; // -1 if no height specified
-    const int imageWidth = 300;
+    const int imageWidth = -1;
     
     var node = (IPublishedContent)ViewData["Node"];
 
@@ -21,46 +21,26 @@
 
 @helper ShowPost(IPublishedContent node, string url, int imageHieght, int imageWidth, string defaultImage)
     {
-        <article class="uBlogsy_post uBlogsy_bottom_border">
-        <h2>
-            <a href="@url" title="@node.GetPropertyValue("uBlogsyContentTitle")"><span>@node.GetPropertyValue("uBlogsyContentTitle")</span></a></h2>
-        <h3 class="uBlogsy_post_date uBlogsy_font_style40">@(node.GetPropertyValue<DateTime>("uBlogsyPostDate").ToString("dddd MMMM d, yyyy"))</h3>
+	
+		<article class="post mb-medium">
+			@RenderPostImage(node, imageHieght, imageWidth, defaultImage)
+			
+			<h2><span>@(node.GetPropertyValue<DateTime>("uBlogsyPostDate").ToString("dddd MMMM d, yyyy"))</span>@node.GetPropertyValue("uBlogsyContentTitle")</h2>
+			<ul class="entry-meta">
+				<li class="entry-category">
+					@Html.Partial("uBlogsy/Post/uBlogsyPostListLabels", ViewData)
+				</li>
+				<li class="entry-author">
+					@Html.Partial("uBlogsy/Post/uBlogsyPostListAuthors", ViewData)
+				</li>
+			</ul>
+			<p>
+				@RenderPostBody(node)<br/>
+				<a href="@node.Url">Read more</a>
+			</p>
+		</article>
 
-        <section class="uBlogsy_post_body">
-            @RenderPostImage(node, imageHieght, imageWidth, defaultImage)
-
-            @RenderPostBody(node)
-        </section>
-
-        <aside class="uBlogsy_post_details">
-            @*list tags*@
-            <div class="uBlogsy_tag_container">
-                @Html.Partial("uBlogsy/Post/uBlogsyPostListTags", new ViewDataDictionary(ViewData) { { "ShowCount", true } })
-            </div>
-
-            @*list labels*@
-            <div class="uBlogsy_label_container">
-                @Html.Partial("uBlogsy/Post/uBlogsyPostListLabels", ViewData)
-            </div>
-            
-            @*list authors*@
-            @Html.Partial("uBlogsy/Post/uBlogsyPostListAuthors", ViewData)
-                
-        </aside>
-            
-        @*link to comments on this page - install uCommentsy, then uncomment this line*@
-        @try
-        {
-            @Html.Partial("uCommentsy/uCommentsyShowLinkToComments")
-        }
-        catch (Exception) { }
-            
-    </article>
 }
-
-
-
-
 
 
 @helper RenderPostBody(IPublishedContent d)
@@ -97,16 +77,16 @@
                  {"Suffix", ""},
                  {"Height", imageHieght},
                  {"Width", imageWidth},
-                 {"CssClass", "uBlogsy_post_image"},
+                 {"CssClass", "responsive"},
                  {"Title", "Main Image"},
                  {"Map", string.Empty },
                  {"DefaultImage", defaultImage},
                  {"Node", node}
              };
-                 
-    <a href="@node.Url" title="Post image">
-        <figure class="uBlogsy_post_image">
-            @Html.Partial("~/Views/Partials/uBlogsy/Shared/uBlogsyShowImage.cshtml", imageData)     
-        </figure>
-    </a>
+			 
+	<div class="post-pic">
+		<a href="@node.Url">
+			@Html.Partial("~/Views/Partials/uBlogsy/Shared/uBlogsyShowImage.cshtml", imageData)
+		</a>
+	</div>
  }
