--- a/Views/Partials/uBlogsy/Post/uBlogsyPostListAuthors.cshtml
+++ b/Views/Partials/uBlogsy/Post/uBlogsyPostListAuthors.cshtml
@@ -10,44 +10,22 @@
 	try{
     var node = (IPublishedContent)ViewData["Node"] ?? Model.Content;
     var landing = DataService.Instance.GetLanding(Model.Content);
-    var gravatarSize = (int)ViewData["GravatarSize"];
+    //var gravatarSize = (int)ViewData["GravatarSize"];
     var authors = PostService.Instance.GetAuthors(node, false).ToList(); 
     
-    @RenderForPost(landing, authors, gravatarSize, node.GetPropertyValue<DateTime>("uBlogsyPostDate"))
+    @RenderForPost(landing, authors, node.GetPropertyValue<DateTime>("uBlogsyPostDate"))
 	}catch(Exception ex){}
 }
 
 
-@helper RenderForPost(IPublishedContent landing,  List<IPublishedContent> authors, int gravatarSize, DateTime postDate)
+@helper RenderForPost(IPublishedContent landing,  List<IPublishedContent> authors, DateTime postDate)
 {
-    <div class="uBlogsy_author uBlogsy_font_style30">
-        @*render gravatar images*@
-        <div>
-            @foreach (var a in authors)
-            {
-                var name = a.GetPropertyValue<string>("uBlogsyAuthorName").Trim();
-                <a href="@landing.Url()?author=@Server.UrlEncode(name)" title="@name" class="uBlogsy_author_thumb">
-                    <img src="@GravatarHelper.GetUrl(a.GetPropertyValue<string>("uBlogsyAuthorGravatarEmail"), gravatarSize)" alt="@(a.GetPropertyValue("uBlogsyAuthorName"))" class="uBlogsy_gravatar uBlogsy_gravatar@gravatarSize" />
-                </a>
-            }
-        </div>               
-        
-        @if (authors.Any())
-        {
-            <span>@Umbraco.GetDictionaryValue("uBlogsyDicPostWrittenBy")</span> 
-        }
-        <span class="uBlogsy_author_name">
-            @foreach (var a in authors)
-            {
-                var name = a.GetPropertyValue<string>("uBlogsyAuthorName").Trim();
-                <a href="@landing.Url()?author=@Server.UrlEncode(name)" title="@name">@name</a>if (a != authors.Last())
-                                                                                    {<span>,</span>}
-            }
-        </span> 
-        
-        <span class="uBlogsy_post_time">@Umbraco.GetDictionaryValue("uBlogsyDicPostWrittenAt")
-            @(postDate.ToString("HH:mm"))</span>
-    </div>    
-    
+	<span class="uBlogsy_author_name">
+		@foreach (var a in authors)
+		{
+			var name = a.GetPropertyValue<string>("uBlogsyAuthorName").Trim();
+			<span>@name</span>
+		}
+	</span>    
 }
 
